Fixing video size on mobile

--- a/works-styles.css
+++ b/works-styles.css
@@ -494,6 +494,19 @@ body.modal-open #header-mobile {
   align-items: center;
 }
 
+.modal-media {
+  width: 100%;
+  max-height: 60vh;       /* Maximum height as needed */
+  aspect-ratio: 16 / 9; 
+  position: relative;     /* This gives the container a height */
+}
+
+.modal-media iframe {
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  object-fit: cover;
+}
 
 @media (max-width: 768px) {
 
@@ -759,6 +772,7 @@ body.modal-open #header-mobile {
 /* Ensure modal image is responsive */
 .modal-media {
   width: 100%;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -767,7 +781,7 @@ body.modal-open #header-mobile {
 
 .modal-image {
   width: 100%;
-  max-height: 40vh;
+  max-height: 30vh;
   object-fit: cover;
 }
 
@@ -933,10 +947,20 @@ body.modal-open #header-mobile {
   background-color: #ff0000; /* Highlight color */
 }
 
-.modal-left {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.modal-media {
+  width: 100%;
+  max-height: 80vh;       /* Maximum height as needed */
+  aspect-ratio: 16 / 9; 
+  position: relative;     /* This gives the container a height */
 }
+
+.modal-media iframe {
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  object-fit: cover;
+}
+
+
 
 }
